# FFCodex

./: .gitignore  .gitmodules  Cargo.toml  RESAMPLE_OPTIMIZATION.md  build.rs  build_chromaprint.rs  build_wavpack.rs  debug_metadata.rs  id3_test.rs  smed_test.rs  test_flac_roundtrip.rs  test_id3.rs  test_metadata_fix.rs  test_smed_filtering.rs  test_wavpack_metadata.rs
.claude/: settings.local.json
examples/: bit_depth_benchmark.rs  chromaprint_test.rs  create_test_metadata.rs  metadata_roundtrip.rs  profile_aif_processing.rs  resample_benchmark.rs  test_comprehensive_metadata.rs  test_description_logic.rs  test_metadata_preservation.rs  test_wav_description.rs  test_wavpack_metadata.rs
resources/lib/windows/x64/: chromaprint.lib
src/: chromaprint.rs  chromaprint_bindings.rs  chromaprint_example.rs  codecs.rs  ixml.rs  ixml_text  lib.rs  main.rs  metadata.rs  playback.rs  prelude.rs  resample.rs  soundminer.rs  wavpack_bindings.rs
src/bindings/: chromaprint_bindings.rs  mod.rs
src/codecs/: aif.rs  flac.rs  mp3.rs  wav.rs  wavpack.rs
src/unused (for now)/: metadata.rs  mp3.rs
