[package]
name = "FFcodex"
version = "0.1.3"
edition = "2024"
build = "build.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ffcodex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
byteorder = "1.5.0"
# chromaprint = "0.2.0"  # Removed since we're using our static library
claxon = "0.4.3"
flacenc = "0.4.0"
# lame = "0.1.3"
libc = "0.2"       # Added for C memory management
memmap2 = "0.9.5"
metaflac = "0.2.8"
rand = "0.9.1"
# minimp3 = "0.5.1"
rayon = "1.10.0"
sha2 = "0.10.9"


[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.21"
cmake = "0.1.50"
git2 = "0.20.2"
