[package]
name = "FFcodex"
version = "0.2.1"
edition = "2024"
build = "build.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ffcodex_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"  # Used by chromaprint
byteorder = "1.5.0"
claxon = "0.4.3"   # FLAC decoding
flacenc = "0.4.0"  # FLAC encoding
libc = "0.2"       # C memory management for wavpack/chromaprint
memmap2 = "0.9.5"  # Memory mapped file I/O
metaflac = "0.2.8" # FLAC metadata handling
quick-xml = "0.36" # iXML parsing
rand = "0.9.1"     # Used by resample dithering and wavpack temp files
rayon = "1.10.0"   # Parallel processing
serde_json = "1.0" # JSON serialization in metadata chunks
sha2 = "0.10.9"    # Used by chromaprint
wide = "0.7.33"


[build-dependencies]
bindgen = "0.71.1"
cc = "1.2.21"
cmake = "0.1.50"
git2 = "0.20.2"

[profile.release]
lto = true        # Link-time optimization
codegen-units = 1 # Better optimization at cost of compile time
panic = "abort"   # Smaller binary size
opt-level = 3     # Maximum optimization

[profile.bench]
inherits = "release"
debug = true         # Keep debug info for profiling
